<resources>
    <string name="app_name">Neengalum Vellalam Oru Kodi</string>
    <string name="q1">Before Mt.Everest was discovered, what was the highest mountain in the world?</string>
    <string name="ques_one">Before Mt.Everest was discovered, what was the highest mountain in the world ?</string>
    <string name="mt_kilimanjaro">Mt.Kilimanjaro</string>
    <string name="next">Next</string>
    <string name="no_mountain">No Mountain</string>
    <string name="mount_davidson">Mount Davidson</string>
    <string name="eat">What can you never eat for Breakfast?</string>
    <string name="dinner">Dinner</string>
    <string name="something_sugary">Something Sugary</string>
    <string name="supper">Supper</string>
    <string name="lunch">Lunch</string>
    <string name="next2">Next</string>
</resources>
